terraform/load-balancer.tf
############################################
# ALB
############################################
resource "aws_lb" "app" {
  name               = "app-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.alb-prod-sg.id]
  subnets            = [
    aws_subnet.subnet-public-a.id,
    aws_subnet.subnet-public-b.id
  ]

  tags = {
    Name = "app-alb"
  }
}

############################################
# Target Group
############################################
resource "aws_lb_target_group" "app" {
  name     = "app-tg"
  port     = 8080
  protocol = "HTTP"
  vpc_id   = aws_vpc.vpc-prod.id
  target_type = "ip"

  health_check {
    path                = "/health"
    interval            = 30
    timeout             = 5
    healthy_threshold   = 2
    unhealthy_threshold = 2
    matcher             = "200-399"
  }
}

############################################
# Listener
############################################
resource "aws_lb_listener" "app" {
  load_balancer_arn = aws_lb.app.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.app.arn
  }
}
